--- a/admin/views/layout.ejs
+++ b/admin/views/layout.ejs
@@ -10,7 +10,7 @@
 <body class="bg-gray-100">
   <%- include('navbar') %>
   
-  <main class="ml-64 p-8">
+  <main class="lg:ml-64 p-4 lg:p-8 transition-all duration-300">
     <div class="max-w-7xl mx-auto">
       <%- body %>
     </div>
